[Payments] More detailed error messages for payment handler install.

Tested on:
https://rsolomakhin.github.io/pr/apps/no-manifest/
https://rsolomakhin.github.io/pr/apps/404-manifest/
https://rsolomakhin.github.io/pr/apps/no-icon/
https://rsolomakhin.github.io/pr/apps/404-icon/
https://rsolomakhin.github.io/pr/apps/no-name/

Bug: 785301
Change-Id: I5a425982262c520cd04d7afcbf69795764c4351c
Reviewed-on: https://chromium-review.googlesource.com/773041
Commit-Queue: Rouslan Solomakhin <rouslan@chromium.org>
Reviewed-by: Ganggui Tang <gogerald@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516922}
Former-commit-id: 64ec3fbc585aefb3cb0b6acfb825aa97043de2ad