content/browser/payments/payment_app_info_fetcher.cc
@@ -12,18 +12,17 @@
 #include "content/public/browser/browser_thread.h"
 #include "content/public/browser/manifest_icon_downloader.h"
 #include "content/public/browser/manifest_icon_selector.h"
+#include "content/public/common/console_message_level.h"
 #include "ui/gfx/image/image.h"
 
 namespace content {
 
-PaymentAppInfoFetcher::PaymentAppInfo::PaymentAppInfo() {}
-PaymentAppInfoFetcher::PaymentAppInfo::~PaymentAppInfo() {}
-
 PaymentAppInfoFetcher::PaymentAppInfoFetcher()
-    : context_process_id_(-1),
-      context_frame_id_(-1),
-      fetched_payment_app_info_(std::make_unique<PaymentAppInfo>()) {}
-PaymentAppInfoFetcher::~PaymentAppInfoFetcher() {}
+    : fetched_payment_app_info_(std::make_unique<PaymentAppInfo>()) {}
+
+PaymentAppInfoFetcher::PaymentAppInfo::PaymentAppInfo() {}
+
+PaymentAppInfoFetcher::PaymentAppInfo::~PaymentAppInfo() {}
 
 void PaymentAppInfoFetcher::Start(
     const GURL& context_url,
@@ -42,6 +41,14 @@ void PaymentAppInfoFetcher::Start(
       base::BindOnce(&PaymentAppInfoFetcher::StartFromUIThread, this,
                      std::move(provider_hosts)));
 }
+
+PaymentAppInfoFetcher::WebContentsHelper::WebContentsHelper(
+    WebContents* web_contents)
+    : WebContentsObserver(web_contents) {}
+
+PaymentAppInfoFetcher::WebContentsHelper::~WebContentsHelper() {}
+
+PaymentAppInfoFetcher::~PaymentAppInfoFetcher() {}
 
 void PaymentAppInfoFetcher::StartFromUIThread(
     const std::unique_ptr<std::vector<std::pair<int, int>>>& provider_hosts) {
@@ -66,8 +73,7 @@ void PaymentAppInfoFetcher::StartFromUIThread(
       continue;
     }
 
-    context_process_id_ = frame.first;
-    context_frame_id_ = frame.second;
+    web_contents_helper_ = std::make_unique<WebContentsHelper>(web_content);
 
     web_content->GetManifest(base::Bind(
         &PaymentAppInfoFetcher::FetchPaymentAppManifestCallback, this));
@@ -82,7 +88,26 @@ void PaymentAppInfoFetcher::FetchPaymentAppManifestCallback(
     const Manifest& manifest) {
   DCHECK_CURRENTLY_ON(BrowserThread::UI);
 
-  if (url.is_empty() || manifest.IsEmpty()) {
+  manifest_url_ = url;
+  if (manifest_url_.is_empty()) {
+    WarnIfPossible(
+        "The page that installed the payment handler does not contain a web "
+        "app manifest link: <link rel=\"manifest\" "
+        "href=\"some-file-name-here\">. This manifest defines the payment "
+        "handler's name and icon. User may not recognize this payment handler "
+        "in UI, because it will be labeled only by its origin.");
+    PostPaymentAppInfoFetchResultToIOThread();
+    return;
+  }
+
+  if (manifest.IsEmpty()) {
+    WarnIfPossible(
+        "Unable to download a valid payment handler web app manifest from \"" +
+        manifest_url_.spec() +
+        "\". This manifest cannot be empty and must in JSON format. The "
+        "manifest defines the payment handler's name and icon. User may not "
+        "recognize this payment handler in UI, because it will be labeled only "
+        "by its origin.");
     PostPaymentAppInfoFetchResultToIOThread();
     return;
   }
@@ -106,7 +131,19 @@ void PaymentAppInfoFetcher::FetchPaymentAppManifestCallback(
     }
   }
 
-  if (!manifest.name.is_null()) {
+  if (manifest.name.is_null()) {
+    WarnIfPossible("The payment handler's web app manifest \"" +
+                   manifest_url_.spec() +
+                   "\" does not contain a \"name\" field. User may not "
+                   "recognize this payment handler in UI, because it will be "
+                   "labeled only by its origin.");
+  } else if (manifest.name.string().empty()) {
+    WarnIfPossible(
+        "The \"name\" field in the payment handler's web app manifest \"" +
+        manifest_url_.spec() +
+        "\" is empty. User may not recognize this payment handler in UI, "
+        "because it will be labeled only by its origin.");
+  } else {
     base::UTF16ToUTF8(manifest.name.string().c_str(),
                       manifest.name.string().length(),
                       &(fetched_payment_app_info_->name));
@@ -119,40 +156,61 @@ void PaymentAppInfoFetcher::FetchPaymentAppManifestCallback(
   const int kPaymentAppIdealIconSize = 0xFFFF;
   const int kPaymentAppMinimumIconSize = 0;
 
-  GURL icon_url = ManifestIconSelector::FindBestMatchingIcon(
+  if (manifest.icons.empty()) {
+    WarnIfPossible(
+        "Unable to download the payment handler's icon, because the web app "
+        "manifest \"" +
+        manifest_url_.spec() +
+        "\" does not contain an \"icons\" field with a valid URL in \"src\" "
+        "sub-field. User may not recognize this payment handler in UI.");
+    PostPaymentAppInfoFetchResultToIOThread();
+    return;
+  }
+
+  icon_url_ = ManifestIconSelector::FindBestMatchingIcon(
       manifest.icons, kPaymentAppIdealIconSize, kPaymentAppMinimumIconSize,
       Manifest::Icon::ANY);
-  if (!icon_url.is_valid()) {
+  if (!icon_url_.is_valid()) {
+    WarnIfPossible(
+        "No suitable payment handler icon found in the \"icons\" field defined "
+        "in the web app manifest \"" +
+        manifest_url_.spec() +
+        "\". This is most likely due to unsupported MIME types in the "
+        "\"icons\" field. User may not recognize this payment handler in UI.");
     PostPaymentAppInfoFetchResultToIOThread();
     return;
   }
 
-  RenderFrameHostImpl* render_frame_host =
-      RenderFrameHostImpl::FromID(context_process_id_, context_frame_id_);
-  if (!render_frame_host) {
+  if (!web_contents_helper_->web_contents()) {
+    LOG(WARNING) << "Unable to download the payment handler's icon because no "
+                    "renderer was found, possibly because the page was closed "
+                    "or navigated away during installation. User may not "
+                    "recognize this payment handler in UI, because it will be "
+                    "labeled only by its name and origin.";
     PostPaymentAppInfoFetchResultToIOThread();
     return;
   }
 
-  WebContents* web_content =
-      WebContents::FromRenderFrameHost(render_frame_host);
-  if (!web_content) {
-    PostPaymentAppInfoFetchResultToIOThread();
-    return;
-  }
-
-  if (!content::ManifestIconDownloader::Download(
-          web_content, icon_url, kPaymentAppIdealIconSize,
-          kPaymentAppMinimumIconSize,
-          base::Bind(&PaymentAppInfoFetcher::OnIconFetched, this))) {
-    PostPaymentAppInfoFetchResultToIOThread();
-  }
+  bool can_download = content::ManifestIconDownloader::Download(
+      web_contents_helper_->web_contents(), icon_url_, kPaymentAppIdealIconSize,
+      kPaymentAppMinimumIconSize,
+      base::Bind(&PaymentAppInfoFetcher::OnIconFetched, this));
+  // |can_download| is false only if web contents are  null or the icon URL is
+  // not valid. Both of these conditions are manually checked above, so
+  // |can_download| should never be false. The manual checks above are necessary
+  // to provide more detailed error messages.
+  DCHECK(can_download);
 }
 
 void PaymentAppInfoFetcher::OnIconFetched(const SkBitmap& icon) {
   DCHECK_CURRENTLY_ON(BrowserThread::UI);
 
   if (icon.drawsNothing()) {
+    WarnIfPossible("Unable to download a valid payment handler icon from \"" +
+                   icon_url_.spec() +
+                   "\", which is defined in the web app manifest \"" +
+                   manifest_url_.spec() +
+                   "\". User may not recognize this payment handler in UI.");
     PostPaymentAppInfoFetchResultToIOThread();
     return;
   }
@@ -171,6 +229,18 @@ void PaymentAppInfoFetcher::PostPaymentAppInfoFetchResultToIOThread() {
   BrowserThread::PostTask(BrowserThread::IO, FROM_HERE,
                           base::BindOnce(std::move(callback_),
                                          std::move(fetched_payment_app_info_)));
+}
+
+void PaymentAppInfoFetcher::WarnIfPossible(const std::string& message) {
+  DCHECK_CURRENTLY_ON(BrowserThread::UI);
+  DCHECK(web_contents_helper_);
+
+  if (web_contents_helper_->web_contents()) {
+    web_contents_helper_->web_contents()->GetMainFrame()->AddMessageToConsole(
+        CONSOLE_MESSAGE_LEVEL_WARNING, message);
+  } else {
+    LOG(WARNING) << message;
+  }
 }
 
 }  // namespace content
